Fix fdo#64125 - Use default for preserveAspectRatio scaling

Align code with
 - http://www.w3.org/TR/SVG/coords.html#ViewBoxAttribute
 - http://www.w3.org/TR/SVG/coords.html#PreserveAspectRatioAttribute

Use bounding box if no ViewBox is given

Change-Id: I0f1704a7c8f3140dc8c49277b88ae77d58af1407